--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,11 @@
 .App .wrapper {
   display: flex;
   height: 100%;
+  flex-direction: column;
 }
 .App .wrapper > div:last-child {
-  width: calc(100% - 75px);
+  width: 100%;
+  height: calc(100% - 75px);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -67,7 +69,7 @@ body {
   margin: 0;
   box-sizing: border-box;
   padding: 0;
-  background: linear-gradient(107deg, rgba(0, 102, 0, 0.5) 0%, rgb(209, 217, 29) 51%, rgba(10, 146, 0, 0.5) 100%);
+  font-family: var(--tg-);
 }
 body #root {
   height: 100%;
