--- a/src/components/task.scss
+++ b/src/components/task.scss
@@ -1,40 +1,63 @@
-.task{
-  display: flex;
+.task-wrapper{
 
-
-  img{
-    min-width: 40px;
-    min-height: 40px;
-    max-width: 40px;
-    max-height: 40px;
-    background-color: #404040;
-    border-radius: 50%;
-    margin: 5px 5px 0 0;
-  }
-  .task-inner{
+  .task{
     display: flex;
-    margin: 5px 0 10px 0;
-    max-width: 60%;
-    align-items: center;
-    height: fit-content;
-    background-color: #fff;
-    border-radius: 15px;
-    box-sizing: border-box;
-    padding: 5px 5px;
 
 
-    input{
-      min-width: 25px;
-      min-height: 25px;
-      border-radius: 5px;
+    img{
+      min-width: 40px;
+      min-height: 40px;
+      max-width: 40px;
+      max-height: 40px;
       background-color: #404040;
+      border-radius: 50%;
+      margin: 5px 5px 0 0;
     }
-    p{
-      height: auto;
-      width: 90%;
-      text-wrap: normal;
-      text-align: start;
-      margin: 0;
+    .task-inner{
+      display: flex;
+      margin: 5px 0 10px 0;
+      max-width: 80%;
+      align-items: center;
+      height: fit-content;
+      background-color: #fff;
+      border-radius: 15px;
+      box-sizing: border-box;
+      padding: 5px 5px;
+
+
+      input{
+        min-width: 25px;
+        min-height: 25px;
+        border-radius: 5px;
+        background-color: #404040;
+      }
+      p{
+        height: auto;
+        width: 90%;
+        text-wrap: normal;
+        text-align: start;
+        margin: 0;
+
+      }
     }
   }
+  .task-buttons{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+
+
+    button{
+      flex-basis: 35%;
+      height: 25px;
+      font-size: 16px;
+
+      outline: 0;
+      border: 0;
+      border-radius: 15px;
+      background-color: #23b8ff;
+    }
+  }
+
 }
