--- a/src/task.css
+++ b/src/task.css
@@ -1,7 +1,7 @@
-.task {
+.task-wrapper .task {
   display: flex;
 }
-.task img {
+.task-wrapper .task img {
   min-width: 40px;
   min-height: 40px;
   max-width: 40px;
@@ -10,10 +10,10 @@
   border-radius: 50%;
   margin: 5px 5px 0 0;
 }
-.task .task-inner {
+.task-wrapper .task .task-inner {
   display: flex;
   margin: 5px 0 10px 0;
-  max-width: 60%;
+  max-width: 80%;
   align-items: center;
   height: fit-content;
   background-color: #fff;
@@ -21,18 +21,33 @@
   box-sizing: border-box;
   padding: 5px 5px;
 }
-.task .task-inner input {
+.task-wrapper .task .task-inner input {
   min-width: 25px;
   min-height: 25px;
   border-radius: 5px;
   background-color: #404040;
 }
-.task .task-inner p {
+.task-wrapper .task .task-inner p {
   height: auto;
   width: 90%;
   text-wrap: normal;
   text-align: start;
   margin: 0;
+}
+.task-wrapper .task-buttons {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  margin-bottom: 20px;
+}
+.task-wrapper .task-buttons button {
+  flex-basis: 35%;
+  height: 25px;
+  font-size: 16px;
+  outline: 0;
+  border: 0;
+  border-radius: 15px;
+  background-color: #23b8ff;
 }
 
 /*# sourceMappingURL=task.css.map */
