--- a/src/components/task.scss
+++ b/src/components/task.scss
@@ -1,63 +1,113 @@
-.task-wrapper{
+.task {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin: 10px 0;
+  flex-direction: column;
 
-  .task{
-    display: flex;
 
 
-    img{
+  .task-inner {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+
+    .task-priority {
+      width: 5px;
+      height: 100%;
+      background-color: red;
+      border-radius: 0;
+    }
+
+    img {
+      width: 40px;
+      height: 40px;
       min-width: 40px;
       min-height: 40px;
-      max-width: 40px;
-      max-height: 40px;
+
       background-color: #404040;
       border-radius: 50%;
       margin: 5px 5px 0 0;
     }
-    .task-inner{
-      display: flex;
-      margin: 5px 0 10px 0;
-      max-width: 80%;
-      align-items: center;
-      height: fit-content;
-      background-color: #fff;
-      border-radius: 15px;
-      box-sizing: border-box;
-      padding: 5px 5px;
 
+      &>div{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        background: var(--tg-theme-secondary-bg-color, #000);
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
 
-      input{
-        min-width: 25px;
-        min-height: 25px;
-        border-radius: 5px;
-        background-color: #404040;
-      }
-      p{
-        height: auto;
-        width: 90%;
-        text-wrap: normal;
-        text-align: start;
-        margin: 0;
+        p{
+          height: auto;
+          box-sizing: border-box;
+          width: 100%;
+          text-align: start;
+          margin: 0;
+          background: 0;
+          padding: 10px 5px;
+        }
 
+        div{
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          box-sizing: border-box;
+          padding: 10px 10px 0 5px;
+          justify-content: space-between;
+
+          p {
+            padding: 0 5px 10px 5px;
+            color: #4b4b4b;
+          }
+          .task-check-box {
+            box-sizing: border-box;
+            width: 30px;
+            height: 30px;
+            min-width: 20px;
+            background: linear-gradient(180deg, #D7B258, #E57770);
+            border-left: 0;
+            border-radius: 50%;
+            margin-left: 10px;
+          }
+        }
       }
     }
-  }
-  .task-buttons{
+
+
+  .task-buttons {
+    margin-top: 10px;
     display: flex;
     width: 100%;
     justify-content: space-evenly;
-    margin-bottom: 20px;
 
-
-    button{
-      flex-basis: 35%;
-      height: 25px;
-      font-size: 16px;
-
-      outline: 0;
+    button {
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+      color: white;
       border: 0;
       border-radius: 15px;
-      background-color: #23b8ff;
+      height: 25px;
+      padding: 0;
+      box-sizing: border-box;
+      flex-basis: 25%;
+
+      &:first-child {
+        border: #79C063 1px solid;
+        background: var(--tg-theme-bg-secondary-color, #000);
+      }
+
+      &:nth-child(2) {
+        border: #D7B258 1px solid;
+        background: var(--tg-theme-bg-secondary-color, #000);
+
+      }
+
+      &:last-child {
+        border: #E57770 1px solid;
+        background: var(--tg-theme-bg-secondary-color, #000);
+
+      }
+
     }
   }
-
 }
