made friends frontend and backend

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,7 @@ body #root .App .wrapper .task-group .button-wrapper button {
 body #root .App .wrapper > div:last-child {
   width: 100%;
   height: calc(100% - 40px);
+  background: var(--theme-bg-color, #222);
   flex-grow: 1;
   display: flex;
   flex-direction: column;
