--- a/src/components/task.scss
+++ b/src/components/task.scss
@@ -62,13 +62,13 @@
           }
           .task-check-box {
             box-sizing: border-box;
+            min-width: 30px;
+            min-height: 30px;
             width: 30px;
             height: 30px;
-            min-width: 20px;
             background: linear-gradient(180deg, #D7B258, #E57770);
             border-left: 0;
             border-radius: 50%;
-            margin-left: 10px;
           }
         }
       }
