--- a/src/task.css
+++ b/src/task.css
@@ -56,13 +56,13 @@
 }
 .task .task-inner > div div .task-check-box {
   box-sizing: border-box;
+  min-width: 30px;
+  min-height: 30px;
   width: 30px;
   height: 30px;
-  min-width: 20px;
   background: linear-gradient(180deg, #D7B258, #E57770);
   border-left: 0;
   border-radius: 50%;
-  margin-left: 10px;
 }
 .task .task-buttons {
   margin-top: 10px;
